<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    android:background="@color/background_light"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_marginBottom="@dimen/margin_large" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/margin_medium"
        android:padding="@dimen/padding_medium" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/margin_medium"
        android:padding="@dimen/padding_medium" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/login"
        android:backgroundTint="@color/primary_blue"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_medium" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Register"
        android:textColor="@color/primary_blue"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>

