<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_title"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_description"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <EditText
            android:id="@+id/etStartingPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/starting_price"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <EditText
            android:id="@+id/etReservePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Reserve Price (Optional)"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <EditText
            android:id="@+id/etDurationDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Duration (Days, Default: 7)"
            android:inputType="number"
            android:layout_marginBottom="@dimen/margin_medium"
            android:padding="@dimen/padding_medium" />

        <Button
            android:id="@+id/btnPublish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/publish"
            android:backgroundTint="@color/primary_blue"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_medium" />

        <Button
            android:id="@+id/btnSaveDraft"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/save_draft"
            android:backgroundTint="@color/accent_orange"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>

